# gst-plugins-cv

./: AUTHORS  README.md  meson.build
ext/: gstcv.cpp  meson.build
ext/dlib/: gstcvdlibobjectdetecthog.cpp  gstcvdlibobjectdetecthog.h
ext/hacpp/: gstcvhacppobjectassign.cpp  gstcvhacppobjectassign.h
ext/improc/: gstcvdraw.cpp  gstcvdraw.h  gstcvscale.cpp  gstcvscale.h
ext/utils/: gstcvobjectcache.cpp  gstcvobjectcache.h
flatpak/: io.github.cfoch.gst_plugins_cv.json.in
gst-libs/gst/: meson.build
gst-libs/gst/cv/: cv-prelude.h  dupscalemeta.cpp  dupscalemeta.h  gstcvobjectassign.cpp  gstcvobjectassign.h  gstcvobjectdetect.cpp  gstcvobjectdetect.h  meson.build  multiroimeta.c  multiroimeta.h  objectinfo.c  objectinfo.h  objectinfocentroid.c  objectinfocentroid.h  objectinfodraw.cpp  objectinfodraw.h  objectinfomap.c  objectinfomap.h  objectinfomapmeta.c  objectinfomapmeta.h  roimeta.c  roimeta.h  utils.c  utils.h
gst-libs/gst/cv/object/info/: objectinfo.c  objectinfo.h  objectinfocentroid.c  objectinfocentroid.h  objectinfodraw.cpp  objectinfodraw.h  objectinfomap.c  objectinfomap.h  objectinfomapcache.c  objectinfomapcache.h  objectinfomapcachemeta.c  objectinfomapcachemeta.h  objectinfomapmeta.c  objectinfomapmeta.h  objectinfomapnamedcache.c  objectinfomapnamedcache.h  objectinfoutils.c  objectinfoutils.h
hooks/: pre-commit.hook
scripts/: gstcv-indent
scripts/data/: uncrustify.cfg
scripts/helpers/: indent-helper.sh
tests/: meson.build
tests/cv/: meson.build
tests/cv/object/: meson.build
tests/cv/object/info/: meson.build  objectinfo.c  objectinfomap.c  objectinfomapcache.c
tools/: build-flatpak.sh
