exe = executable('objectinfo',
  'objectinfo.c',
  install : false,
  dependencies : [gstcv_dep]
)
test('objectinfo', exe)

exe = executable('objectinfomap',
  'objectinfomap.c',
  install : false,
  dependencies : [gstcv_dep]
)
test('objectinfomap', exe)

exe = executable('objectinfomapcache',
  'objectinfomapcache.c',
  install : false,
  dependencies : [gstcv_dep]
)
test('objectinfomapcache', exe)